# telegram-llm-bot

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.yaml  logging.conf  ngnix.conf  pyproject.toml
.github/workflows/: ci.yml
src/bot/: bot.py  config.yml  requirements.txt
src/lm/: lm.py
src/lm/openai_azure/: lm.py  requirements.txt  service.py
src/lm_api/: app.py
src/telegram_llm_bot/: app.py  config.py  doctor.py  eval.py  paths.py  scaffold.py
src/telegram_llm_bot/bots/base_chatbot/: .env.example  Dockerfile  config.yml  settings.py
src/telegram_llm_bot/bots/base_chatbot/handlers/: text.py  text_chat.py  voice.py
src/telegram_llm_bot/bots/base_chatbot/services/: text.py  voice.py
src/telegram_llm_bot/bots/idea_sparring/: Dockerfile  settings.py
src/telegram_llm_bot/bots/idea_sparring/handlers/: ideas.py
src/telegram_llm_bot/bots/idea_sparring/services/: ideas.py
src/telegram_llm_bot/shared/: audio.py  chat.py  messages.py  readiness.py  tools.py  utils.py
src/telegram_llm_bot/shared/db/: minio_storage.py  mongo.py  weaviate_store.py
src/telegram_llm_bot/shared/handlers/: audio.py  basic.py
src/telegram_llm_bot/shared/history/: history.py
src/telegram_llm_bot/shared/llm/beam/: app.py  requirements.txt
src/telegram_llm_bot/shared/services/: audio.py  basic.py
src/telegram_llm_guru/: db.py  main.py  utils.py
src/telegram_llm_guru/handlers/: message.py
src/telegram_llm_guru/lm_api/: requirements.txt
src/telegram_llm_guru/scripts/: config.yml
src/telegram_smart_bots/: app.py
src/telegram_smart_bots/bots/base_chatbot/: config.yml  settings.py
src/telegram_smart_bots/bots/base_chatbot/handlers/: text_chat.py
src/telegram_smart_bots/bots/base_chatbot/services/: text_chat.py
src/telegram_smart_bots/bots/idea_sparring/: Dockerfile  settings.py
src/telegram_smart_bots/bots/idea_sparring/handlers/: ideas.py
src/telegram_smart_bots/bots/idea_sparring/services/: ideas.py
src/telegram_smart_bots/bots/llm_guru/: Dockerfile  config.yml  settings.py
src/telegram_smart_bots/bots/llm_guru/handlers/: text_chat.py
src/telegram_smart_bots/bots/llm_guru/services/: text_chat.py
src/telegram_smart_bots/bots/voice_journal/: Dockerfile  settings.py
src/telegram_smart_bots/bots/voice_journal/handlers/: image.py  journal.py  location.py  text.py  voice.py
src/telegram_smart_bots/bots/voice_journal/services/: image.py  location.py  text.py  voice.py
src/telegram_smart_bots/bots/voice_journal/utils/: journal.py
src/telegram_smart_bots/llm_guru/handlers/: text_chat.py
src/telegram_smart_bots/llm_guru/services/: text_chat.py
src/telegram_smart_bots/shared/: audio.py  chat.py  utils.py
src/telegram_smart_bots/shared/db/: minio_storage.py  mongo.py  weaviate_store.py
src/telegram_smart_bots/shared/handlers/: audio.py  basic.py
src/telegram_smart_bots/shared/history/: history.py
src/telegram_smart_bots/shared/llm/beam/: app.py
src/telegram_smart_bots/shared/services/: audio.py  basic.py
tests/: test_app.py  test_audio.py  test_chat_providers.py  test_config.py  test_doctor.py  test_eval.py  test_handlers.py  test_history.py  test_minio_storage.py  test_scaffold.py  test_text_service.py  test_tools.py  test_voice_service.py
tests/fixtures/: assistant_eval_cases.yml
