[project]
name = "telegram-llm-bot"
version = "0.7.0"
description = "Telegram AI bot starter with local Ollama and optional Beam support"
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = [{ name = "ma2za", email = "mazzapaolo2019@gmail.com" }]
license = "MIT"
keywords = [
    "telegram-bot",
    "ai-bot",
    "llm",
    "ollama",
    "local-llm",
    "chatbot",
    "python-telegram-bot",
    "qwen",
    "self-hosted",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "python-telegram-bot>=20.5,<22.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "httpx>=0.24.1,<1.0.0",
    "motor>=3.6.0,<4.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "async-lru>=2.0.4,<3.0.0",
]

[project.scripts]
telegram-llm-bot = "telegram_llm_bot.app:main"
telegram-llm-bot-smoke = "telegram_llm_bot.app:smoke"
telegram-llm-bot-provider-check = "telegram_llm_bot.app:provider_check"
telegram-llm-bot-doctor = "telegram_llm_bot.doctor:doctor"
telegram-llm-bot-init = "telegram_llm_bot.scaffold:main"

[tool.poetry]
packages = [{ include = "telegram_llm_bot", from = "src" }]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E402"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.20,<0.16.0)",
]
